--- a/index.html
+++ b/index.html
@@ -224,18 +224,23 @@
                <div style="height:12px"></div>
                <div class="top-raters" id="topRaters"></div>
                <div style="height:12px"></div>
-               <div class="small">How verification works:</div>
-               <pre class="small" style="white-space:pre-wrap">• Sign in with Google.
-• Create high quality reviews.
-• Admins will periodically add new verified users.
-• Users listed there show a ✔ verified badge when signed in.</pre>
+               <div class="small">How to write a review:</div>
+               <pre class="small" style="white-space:pre-wrap">• Select the movie you want to review.
+• Click the "Leave a Rating" button.
+• Choose your rating from 1 to 10 stars.
+• Optionally, include a comment to share your thoughts.
+• Click "Submit Rating" to finalize your review.</pre>
             </div>
             <div style="height:12px"></div>
             <div class="card">
                <strong>Additional Information</strong>
                <div style="height:8px"></div>
                <ul class="small" style="margin:0;padding-left:18px">
-                  <li>Last Updated: October 25, 2025</li>
+                  <div class="small">How verification works:</div>
+                  <pre class="small" style="white-space:pre-wrap">• Sign in with Google.
+• Create high quality reviews.
+• Admins will periodically add new verified users.
+• Users listed there show a ✔ verified badge when signed in.</pre>
                   <a href='https://www.free-counters.org/'>www.free-Counter.org</a> <script type='text/javascript' src='https://www.freevisitorcounters.com/auth.php?id=784532d4e6654eba9bd92261f6bb3a72460355f1'></script>
                   <script type="text/javascript" src="https://www.freevisitorcounters.com/en/home/counter/1423817/t/0"></script>
                </ul>
@@ -552,7 +557,7 @@
          </div>
          <div class="small expanded-count">— ratings</div>
          <div style="flex:1"></div>
-         <button class="ghost expanded-leave-btn">Leave a rating</button>
+         <button class="ghost expanded-leave-btn">Leave a Rating</button>
          </div>
          <div class="expanded-breakdown"></div>
          </div>
@@ -566,7 +571,7 @@
                  <div class="stars-container" role="radiogroup" aria-label="Rating stars"></div>
                  <div style="flex:1"></div>
                  <button class="ghost expanded-cancel-btn">Cancel</button>
-                 <button class="expanded-submit-btn">Submit rating</button>
+                 <button class="expanded-submit-btn">Submit Rating</button>
                </div>
                <textarea class="expanded-comment" placeholder="Optional comment (public)"></textarea>
              </div>
