Update searching / adding movies

--- a/index.html
+++ b/index.html
@@ -102,6 +102,57 @@
          }
          .left{min-height:60vh}
          .controls{display:flex;gap:8px;margin-bottom:12px;flex-wrap:wrap}
+         /* ===== Enhanced Movie Search & Add Layout ===== */
+.movie-search-bar {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 14px;
+}
+
+.search-label {
+  font-weight: 700;
+  font-size: 14px;
+  color: var(--accent);
+  margin-bottom: 6px;
+  letter-spacing: 0.3px;
+  text-transform: uppercase;
+}
+
+.movie-search-bar input[type="search"] {
+  width: 100%;
+  font-size: 15px;
+  padding: 12px;
+  border-radius: 12px;
+  background: rgba(255,255,255,0.04);
+  border: 1px solid rgba(255,255,255,0.1);
+}
+
+.movie-add-row {
+  width: 100%;
+  display: grid;
+  grid-template-columns: 1fr 120px 1fr auto;
+  gap: 10px;
+}
+
+.movie-add-row input[type="text"] {
+  padding: 10px;
+  border-radius: 10px;
+}
+
+.movie-add-row button {
+  background: var(--accent);
+  color: #041820;
+  border: none;
+  border-radius: 10px;
+  font-weight: 700;
+  cursor: pointer;
+  transition: background 0.2s ease;
+}
+
+.movie-add-row button:hover {
+  background: var(--accent-2);
+}
          input[type="text"], input[type="search"], select, textarea{background:var(--glass);border:1px solid rgba(255,255,255,0.04);color:inherit;padding:10px;border-radius:10px;outline:none}
          textarea{min-height:84px;resize:vertical}
          .movie-list{display:grid;gap:12px;margin-top:10px}
@@ -156,17 +207,27 @@
          <!-- Left column -->
          <main class="left">
             <div class="card">
-               <div style="display:flex;justify-content:space-between;align-items:center;margin-bottom:8px">
+               <div style="display:flex;justify-content:space-between;align-items:center;margin-bottom:16px">
                   <strong>Add / Find a Movie</strong>
                   <small class="small">Leave a review!</small>
                </div>
-               <div class="controls" role="group" aria-label="movie controls">
-                  <input type="search" id="searchInput" placeholder="Search titles..." />
-                  <input type="text" id="newTitle" placeholder="Movie title (required)" />
-                  <input type="text" id="newYear" placeholder="Year (optional)" />
-                  <input type="text" id="newPoster" placeholder="Poster URL (optional)" />
-                  <button id="addMovieBtn">Add / Select</button>
-               </div>
+               <!-- UPDATED CONTROLS SECTION -->
+<div class="controls" role="group" aria-label="movie controls">
+
+  <!-- Full-width Movie Search Bar -->
+  <div class="movie-search-bar">
+    <label for="searchInput" class="search-label">🎬 Movie Search</label>
+    <input type="search" id="searchInput" placeholder="Search movies by title..." />
+  </div>
+
+  <!-- Second Row for Adding a New Movie -->
+  <div class="movie-add-row">
+    <input type="text" id="newTitle" placeholder="Movie title (required)" />
+    <input type="text" id="newYear" placeholder="Year (optional)" />
+    <input type="text" id="newPoster" placeholder="Poster URL (optional)" />
+    <button id="addMovieBtn">Add / Select</button>
+  </div>
+</div>
                <div style="display:flex;gap:8px;align-items:center;margin-bottom:8px">
                   <div class="small">Sort:</div>
                   <select id="sortSelect">
