Update meta description & add label for adding movie

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
       <meta name="viewport" content="width=device-width,initial-scale=1" />
       <title>Movie Ratings</title>
       <link rel="icon" type="image/png" href="/images/Favicon.png">
-      <meta name="description" content="Movie Ratings — The supreme movie rating platform." />
+      <meta name="description" content="Movie Ratings is redefining how the world experiences film. Discover, rate, and discuss movies with a global community of fans — all on one powerful, immersive platform." />
       <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
       <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700;800&display=swap" rel="stylesheet">
       <style>
@@ -214,6 +214,7 @@
                   </div>
                   <!-- Second Row for Adding a New Movie -->
                   <div class="movie-add-row">
+                     <label for="newTitle" class="search-label">🪄 Add Movie</label>
                      <input type="text" id="newTitle" placeholder="Movie title (required)" />
                      <input type="text" id="newYear" placeholder="Year (optional)" />
                      <input type="text" id="newPoster" placeholder="Poster URL (optional)" />
