--- a/index.html
+++ b/index.html
@@ -16,7 +16,14 @@
          color-scheme: dark;
          }
          *{box-sizing:border-box}
-         html,body{height:100%;margin:0;font-family:Inter,system-ui,-apple-system,Segoe UI,Roboto,"Helvetica Neue",Arial;color:#e6eef6;background:
+         html,body {
+         height: 100%;
+         margin: 0;
+         font-family: Inter, system-ui, -apple-system, Segoe UI, Roboto, "Helvetica Neue", Arial;
+         color: #e6eef6;
+         background: radial-gradient(1200px 600px at 10% 10%, rgba(8,20,34,0.6), transparent),
+         #06121a; /* solid dark base, no vertical gradient */
+         }
          radial-gradient(1200px 600px at 10% 10%, rgba(8,20,34,0.6), transparent),
          linear-gradient(180deg,#071026 0%, #06121a 60%);}
          .wrap{max-width:1100px;margin:28px auto;padding:20px;display:grid;grid-template-columns:1fr 360px;gap:20px}
@@ -172,7 +179,15 @@
          .right{min-width:320px}
          .top-raters .rater{display:flex;align-items:center;gap:10px;padding:8px;border-radius:8px}
          .avatar{width:44px;height:44px;border-radius:8px;background:linear-gradient(135deg,#111827,#0b1220);display:inline-grid;place-items:center;font-weight:800;color:var(--muted)}
-         footer{grid-column:1 / -1;text-align:center;margin-top:12px;color:var(--muted);font-size:13px}
+         footer {
+         grid-column: 1 / -1;
+         text-align: center;
+         margin-top: 12px;
+         color: var(--muted);
+         font-size: 13px;
+         background: linear-gradient(180deg, #0b1220 0%, #151b34 100%);
+         padding: 20px 0;
+         }
          .badge{background:rgba(255,255,255,0.06);padding:4px 8px;border-radius:999px;font-weight:700;font-size:12px;color:#d9f7ff}
          @media (max-width:980px){.wrap{grid-template-columns:1fr;padding:12px}.right{order:3}}
       </style>
