--- a/index.html
+++ b/index.html
@@ -195,12 +195,12 @@
       <div class="wrap" id="app">
          <header>
             <div class="brand">
-               <div class="logo">MR</div>
-               <div>
-                  <h1>Movie Ratings</h1>
-                  <div class="small">Verified Movie Ratings</div>
-               </div>
-            </div>
+   <img src="images/Favicon.png" alt="Movie Ratings Logo" class="logo">
+   <div>
+      <h1>Movie Ratings</h1>
+      <div class="small">Verified Movie Ratings</div>
+   </div>
+</div>
             <div class="top-actions">
                <div id="signedOutControls">
                   <button id="signInBtn">Sign in with Google</button>
