--- a/index.html
+++ b/index.html
@@ -32,7 +32,17 @@
          .wrap{max-width:1100px;margin:28px auto;padding:20px;display:grid;grid-template-columns:1fr 360px;gap:20px}
          header{grid-column:1 / -1;display:flex;align-items:center;justify-content:space-between;padding-bottom:8px}
          .brand{display:flex;gap:12px;align-items:center}
+         /** OLD
          .logo{width:48px;height:48px;border-radius:12px;background:linear-gradient(135deg,var(--accent),var(--accent-2));display:grid;place-items:center;font-weight:800;color:#012;box-shadow:0 6px 18px rgba(3,6,23,0.6)}
+         */
+         .logo {
+         width: 48px;
+         height: 48px;
+         border-radius: 12px;
+         object-fit: contain;
+         box-shadow: none;
+         background: none;
+         }
          h1{margin:0;font-size:18px}
          .top-actions{display:flex;gap:8px;align-items:center}
          button{cursor:pointer;border-radius:10px;border:none;padding:8px 12px;background:var(--accent);color:#042027;font-weight:700}
@@ -195,12 +205,12 @@
       <div class="wrap" id="app">
          <header>
             <div class="brand">
-   <img src="images/Favicon.png" alt="Movie Ratings Logo" class="logo">
-   <div>
-      <h1>Movie Ratings</h1>
-      <div class="small">Verified Movie Ratings</div>
-   </div>
-</div>
+               <img src="images/Favicon.png" alt="Movie Ratings Logo" class="logo">
+               <div>
+                  <h1>Movie Ratings</h1>
+                  <div class="small">Verified Movie Ratings</div>
+               </div>
+            </div>
             <div class="top-actions">
                <div id="signedOutControls">
                   <button id="signInBtn">Sign in with Google</button>
