Add AdSense code snippet

--- a/index.html
+++ b/index.html
@@ -200,6 +200,10 @@
          #editNameMsg { color: var(--accent); } /* success message color (muted by default) */
          @media (max-width:980px){.wrap{grid-template-columns:1fr;padding:12px}.right{order:3}}
       </style>
+
+      <!-- AdSense code snippet -->
+      <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2342721268649961"
+     crossorigin="anonymous"></script>
    </head>
    <body>
       <div class="wrap" id="app">
